src/Maplr.SuggarShack/K8s/deployment-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: maplrservice-srv
spec:
  type: NodePort
  selector:
    app: maplrservice
  ports:
    - name: maplrservice
      protocol: TCP
      port: 80
      targetPort: 80
